change structure for md history part 4

--- a/frontend/styles/custom-styles.css
+++ b/frontend/styles/custom-styles.css
@@ -1,6 +1,4 @@
-.section-title-secondary-patient-info {
-    font-size: 20px; /* Example: setting font size */
-    color: #333333; /* Example: setting text color */
-    margin-bottom: 10px; /* Example: setting bottom margin */
-    /* Add other styling as needed */
+.dialog-header {
+    border-bottom: 1px solid var(--lumo-contrast-10pct);
+    padding: var(--lumo-space-m);
 }
